@@ -4,27 +4,36 @@ import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.stream.Collectors;
 
 public class Runner {
 
-    public static String EXECUTABLE_PATH = "target/ideless.jar";
+    private static final String EXECUTABLE_RELATIVE_PATH = "target/ideless.jar";
 
-    private final String userPath;
+    private final String workspacePath;
+    private final String executablePath;
 
-    public Runner(String localPath) {
-        userPath = localPath + "/target";
-        File target = new File(userPath);
-        if (target.exists())
-            target.delete();
-        target.mkdir();
+    public Runner(String workspacePath) {
+        this.workspacePath = workspacePath;
+        executablePath = generatePrefixedPathFromMainDir(workspacePath, EXECUTABLE_RELATIVE_PATH);
+    }
+
+    private static String generatePrefixedPathFromMainDir(String fromPath, String relativePath) {
+        String result = "";
+        for (int i = fromPath.split("\\/").length; i > 0; --i)
+            result += "../";
+        return result + relativePath;
     }
 
     public String run(String args) throws ExecutableReturnedErrorException, RunnerException {
         try {
-            Process proc = Runtime.getRuntime().exec("java -jar -Duser.path=" + userPath + " " + EXECUTABLE_PATH + " " + args);
+            ArrayList<String> command = new ArrayList<>(Arrays.asList("java", "-jar", executablePath));
+            command.addAll(Arrays.asList(args.split(" ")));
+            Process proc = new ProcessBuilder(command).directory(new File(workspacePath)).start();
             proc.waitFor();
 
             try (BufferedReader br = new BufferedReader(new InputStreamReader(proc.getErrorStream()))) {
@@ -41,9 +50,5 @@ public class Runner {
             Logger.getLogger(Runner.class.getName()).log(Level.SEVERE, null, ex);
             throw new RunnerException();
         }
-    }
-
-    public String getUserPath() {
-        return userPath;
     }
 }
